--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="../static/styles.css">
+</head>
 
 <body>
 
-  <form action="/add" method="post" style="border:1px solid #ccc">
+  <form action="/add" method="post" class="form-container">
     <div class="container">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
       <hr>
+
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" required>
 
       <label for="username"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="username" required>
@@ -18,12 +28,21 @@
       <label for="psw-repeat"><b>Repeat Password</b></label>
       <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
+      <label for="height"><b>Height (cm)</b></label>
+      <input type="number" placeholder="Enter Height" name="height">
+
+      <label for="weight"><b>Weight (kg)</b></label>
+      <input type="number" placeholder="Enter Weight" name="weight">
+
+      <label for="age"><b>Age</b></label>
+      <input type="number" placeholder="Enter Age" name="age">
+
+      <label for="sex"><b>Sex (0 for Male, 1 for Female)</b></label>
+      <input type="number" placeholder="Enter Sex" name="sex">
 
 
-
-
-      <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
+      <div class="signupbuttons">
+        <a href="/" class="cancelbtn">Cancel</a>
         <button type="submit" class="signupbtn">Sign Up</button>
       </div>
     </div>
