--- a/templates/simple_form.html
+++ b/templates/simple_form.html
@@ -3,3 +3,4 @@
   password: <input type="password" name="pw"> <br>
   <input type="submit">
 </form>
+-- this was just to remember how to make forms lol at the beggning
