https://www.w3schools.com/js/js_this.asp
removed unnecicary drop down boxes on set workout creation.

--- a/templates/my_workouts.html
+++ b/templates/my_workouts.html
@@ -45,7 +45,7 @@
                     workoutList.appendChild(li);
                 });
             } else {
-                console.error('Failed to fetch workouts.');
+                console.error('Failed to get your  workouts.');
             }
         }
 
