--- a/templates/create_workout.html
+++ b/templates/create_workout.html
@@ -32,15 +32,11 @@
                         <option value="Deadlift">Deadlift</option>
                         <option value="Bicep Curl">Bicep Curl</option>
                         <option value="Shoulder Press">Shoulder Press</option>
-                        <option value="Pull-Up">Pull-Up</option>
+                        <option value="PullUp">PullUp</option>
                         <option value="Lateral Pulldowns">Lat Pull Downs</option>
                         <option value="Row">Row</option>
-                        <option value="Barbell Row">Plank</option>
-                        <option value="Overhead Tricep Extension">Over head Tricep Extension</option>
                         <option value="Tricep Extension">Tricep Extension</option>
                         <option value="Face Pull">Face Pulls</option>
-                        <option value="Rear Delt Flys">Rear Delt flys</option>
-                        <option value="Leg Press">Leg Press</option>
                     </select>
 
                     <label>Sets:</label>
@@ -67,23 +63,19 @@
             exerciseDiv.innerHTML = `
                 <label>Exercise Name:</label>
                 <select name="name[]" required> -- for creating new sets ina workout
-                    <option value="Bench Press">Bench Press</option>
-                    <option value="Chest Press">Chest Press</option>
-                    <option value="Lateral Raise">Lateral Raise</option>
-                    <option value="Shoulder Press">Shoulder Press</option>
-                    <option value="Squat">Squat</option>
-                    <option value="Deadlift">Deadlift</option>
-                    <option value="Bicep Curl">Bicep Curl</option>
-                    <option value="Shoulder Press">Shoulder Press</option>
-                    <option value="Pull-Up">Pull-Up</option>
-                    <option value="Lateral Pulldowns">Lat Pull Downs</option>
-                    <option value="Row">Row</option>
-                    <option value="Barbell Row">Plank</option>
-                    <option value="Overhead Tricep Extension">Over head Tricep Extension</option>
-                    <option value="Tricep Extension">Tricep Extension</option>
-                    <option value="Face Pull">Face Pulls</option>
-                    <option value="Rear Delt Flys">Rear Delt flys</option>
-                    <option value="Leg Press">Leg Press</option>
+                        <option value="Bench Press">Bench Press</option>
+                        <option value="Chest Press">Chest Press</option>
+                        <option value="Lateral Raise">Lateral Raise</option>
+                        <option value="Shoulder Press">Shoulder Press</option>
+                        <option value="Squat">Squat</option>
+                        <option value="Deadlift">Deadlift</option>
+                        <option value="Bicep Curl">Bicep Curl</option>
+                        <option value="Shoulder Press">Shoulder Press</option>
+                        <option value="PullUp">PullUp</option>
+                        <option value="Lateral Pulldowns">Lat Pull Downs</option>
+                        <option value="Row">Row</option>
+                        <option value="Tricep Extension">Tricep Extension</option>
+                        <option value="Face Pull">Face Pulls</option>
                 </select>
 
                 <label>Sets:</label>
